# autorate

./: Makefile.am  README.md  autorate-prefs.ui  autorate.rb-plugin.in
autorate/: AutorateConfigureDialog.py  __init__.py
